Customizable HUD + animations

--- a/languages/english.json
+++ b/languages/english.json
@@ -124,6 +124,8 @@
 	"create game": "create game",
 
 "^_Game":"",
+	"points": "points",
+	"points": "points",
 	"world": "world",
 	"time": "time",
 	"edit": "edit",
@@ -304,11 +306,21 @@
 			"levelscreen": "levelscreen",
 			"^_HUD":"",
 				"player name": "player name",
+				"(set to mario for char. name)": "(set to mario for char. name)",
+				"show lives": "show lives",
 				"color": "color",
 				"use letters for worlds over 9": "use letters for worlds over 9",
 				"hud visible": "hud visible",
 				"hud outline": "hud outline",
+				"compact hud": "compact hud",
+				"points on hud": "points on hud",
+				"coins on hud": "coins on hud",
+				"world on hud": "world on hud",
+				"time on hud": "time on hud",
+				"hud templates:": "hud templates:",
+				"classic hud": "classic hud",
 				"simple hud": "simple hud",
+				"disable hud": "disable hud",
 			"^_Ending":"",
 				"ending text": "ending text",
 				"color": "color",
