--- a/languages/spanish.json
+++ b/languages/spanish.json
@@ -119,6 +119,7 @@
 	"create game": "crea juego",
 
 "^_Game":"",
+	"points": "puntos",
 	"world": "mundo",
 	"time": "tiempo",
 	"edit": "editar",
@@ -293,11 +294,22 @@
 			"levelscreen": "intermisión",
 			"^_HUD":"",
 				"player name": "nombre del jugador",
+				"(set to mario for char. name)": "(poner mario para nombre del perso.)",
+				"show lives": "show lives",
 				"color": "color",
 				"use letters for worlds over 9": "usa letras para mundos sobre 9",
 				"hud visible": "hud visible",
 				"hud outline": "hud con contorno",
+				"compact hud": "hud compacto",
+				"points on hud": "hud con puntos",
+				"coins on hud": "hud con monedas",
+				"world on hud": "hud con mundo",
+				"world on hud": "hud con mundo",
+				"time on hud": "hud con tiempo",
+				"hud templates:": "hud modelos:",
+				"classic hud": "hud clásico",
 				"simple hud": "hud simple",
+				"disable hud": "desactivar hud",
 			"^_Ending":"",
 				"ending text": "ending text",
 				"color": "color",
