Added levelscreen customization
Also tweaked the "(set to mario for char. name)" text a bit

--- a/languages/english.json
+++ b/languages/english.json
@@ -306,7 +306,7 @@
 			"levelscreen": "levelscreen",
 			"^_HUD":"",
 				"player name": "player name",
-				"(set to mario for char. name)": "(set to mario for char. name)",
+				"(set to mario for char's name)": "(set to mario for char's name)",
 				"show lives": "show lives",
 				"color": "color",
 				"use letters for worlds over 9": "use letters for worlds over 9",
@@ -334,6 +334,7 @@
 				"add a background image\nby naming it\n'": "add a background image\nby naming it\n'",
 				"or drag an image file\ninto the square!": "or drag an image file\ninto the square!",
 				"preview": "preview",
+				"skip levelscreen": "skip levelscreen",
 		"^_Custom Enemies":"",
 			"current enemy": "current enemy",
 			"enemy template": "enemy template",
