--- a/languages/spanish.json
+++ b/languages/spanish.json
@@ -294,7 +294,7 @@
 			"levelscreen": "intermisión",
 			"^_HUD":"",
 				"player name": "nombre del jugador",
-				"(set to mario for char. name)": "(poner mario para nombre del perso.)",
+				"(set to mario for char's name)": "(poner mario para nombre del perso)",
 				"show lives": "show lives",
 				"color": "color",
 				"use letters for worlds over 9": "usa letras para mundos sobre 9",
@@ -321,6 +321,7 @@
 				"add a background image\nby naming it\n'": "add a background image\nby naming it\n'",
 				"or drag an image file\ninto the square!": "or drag an image file\ninto the square!",
 				"preview": "preestreno",
+				"skip levelscreen": "saltar intermisión",
 		"^_Custom Enemies":"",
 			"current enemy": "enemigo seleccionado",
 			"enemy template": "ejemplo de enemigo",
